attempt at fixing the issue where the navbar and landing page have their backgrounds stretched and not scale properly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,11 +15,8 @@ html {
 .navbar-default{
      background: url("/assets/img/lowpolybackground.svg") no-repeat fixed;
      background-size: cover;
-     width: 100%;
+     
 }
-
-
-
 .navbar-default .navbar-nav > li > a {
     color: #fff;
 }
@@ -27,6 +24,7 @@ html {
 .intro-section {
     height: 100vh;
     max-height: 100%;
+    max-width: 100%;
     text-align: center;
     vertical-align: middle;
     display: flex;
@@ -113,7 +111,7 @@ a:visited, a:link{
 }
 
 .intro-header{
-    max-width: 100%;
+   
    z-index: 2;
    color: white;
 }
@@ -188,8 +186,6 @@ a:visited, a:link{
 }
 
 @media (max-width:768px) {
-
-
 .skill-svg{
     margin-left: auto;
     margin-right: auto;
@@ -292,12 +288,6 @@ a:visited, a:link{
 }
 
 
-@media(max-width: 560px)
-{
-    .circuit-right{
-        visibility: hidden;
-    }
-}
 
 
 
